ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: note1.saikalam.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: knote
            port:
              number: 80

  - host: note2.saikalam.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: knote
            port:
              number: 80
